--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Schools -- England -- Juvenile fiction'
 - !lcsh 'Boys -- Juvenile fiction'
+- GITenberg
 title: 'King of Ranleigh: A School Story'
 url: http://www.gutenberg.org/ebooks/42862
